--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -7,6 +7,13 @@
     <title>LinkedIn</title>
 </head>
 <body>
-    
+    <div class="skill">
+       <div class="skill__name">
+            
+       </div>
+       <div class="skill__description">
+
+        </div>
+    </div>
 </body>
 </html>
