--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,12 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>LinkedIn</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <title>LinkedIn</title>
 </head>
-<body>
-    
+
+<body class="layout-margin linkedin-color">
+  <!-- The Interests section displays the companies that a member or user following -->
+  <div class="container interests">
+    <h2 class="interests__header  ">Interests</h2>
+    <div class="row interests__container">
+      <div class="col-md-1 text-right ">
+        <a href="#"><img src="assets/logo-1.png" class="interests__logo " alt="" /></a>
+      </div>
+      <div class="col-md-5 ">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+      <div class="col-md-1 text-right">
+        <a href="#"><img src="assets/logo-2.png" class="interests__logo" alt="" /></a>
+      </div>
+      <div class="col-md-5 ">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+    </div>
+    <div class="row interests__container">
+      <div class="col-md-1 text-right">
+        <a href="#"><img src="assets/logo-3.png" class="interests__logo " alt="" /></a>
+      </div>
+      <div class="col-md-5">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+      <div class="col-md-1 text-right">
+        <a href="#"><img src="assets/logo-4.jpg" class="interests__logo" alt="" /></a>
+      </div>
+      <div class="col-md-5 ">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+    </div>
+    <div class="row interests__container ">
+      <div class="col-md-1 text-right ">
+        <a href="#"><img src="assets/logo-5.jpg" class="interests__logo " alt="" /></a>
+      </div>
+      <div class="col-md-5">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+      <div class="col-md-1 text-right">
+        <a href="#"><img src="assets/logo-6.jpg" class="interests__logo" alt="" /></a>
+      </div>
+      <div class="col-md-5 ">
+        <a href="#" class="interests__link ">
+          <h3 class="text-truncate interests__description">
+            Company Name or Description
+          </h3>
+        </a>
+        <a href="#" class="interests__link">
+          <p class=" interests__follower-count">
+            company follower counter
+          </p>
+        </a>
+      </div>
+    </div>
+    <!--button to see a linkedin user companies -->
+    <a href="#" type="button" data-toggle="modal" data-target="#interests-modal"
+      class=" row interests__see-all ">
+      <div class="interests__see-all-btn">See all</div>
+    </a>
+
+    <!-- Modal content that contains user's companies -->
+    <div class="modal fade" id="interests-modal" role="dialog">
+      <div class="modal-dialog modal-lg">
+        <div class="interests-modal__content modal-content">
+          <div class="interests-modal__header modal-header">
+            <h3>Companies</h3>
+            <button type="button" class="close interests-modal__close" data-dismiss="modal">
+              &times;
+            </button>
+          </div>
+          <div class="interests-modal__body modal-body ">
+            
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mt-5">
+    <div class="row dashboard">
+      <h2 class="dashboard__title">Your Dashboard</h2>
+      <h3 class="dashboard__subtitle">Private to you</h3>
+      <div class="list-group list-group-horizontal flex-fill ">
+        <a href="#" class="list-group-item dashboard__item list-group-item-action ">
+          <div class="dashboard__count">4</div>
+          <div class="dashboard__description">Who viewed your profile</div>
+        </a>
+        <a href="#" class="list-group-item dashboard__item list-group-item-action ">
+          <div class="dashboard__count">4</div>
+          <div class="dashboard__description">Who viewed your profile</div>
+        </a>
+        <a href="#" class="list-group-item dashboard__item list-group-item-action ">
+          <div class="dashboard__count">4</div>
+          <div class="dashboard__description">Who viewed your profile</div>
+        </a>
+      </div>
+    </div>
+  </div>
+  
+
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script> -->
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
+
 </html>
