removing shitty classes

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,10 +11,10 @@
   <title>LinkedIn</title>
 </head>
 
-<body class="layout-margin linkedin-color">
+<body>
   <!-- The Interests section displays the companies that a member or user following -->
   <div class="container interests">
-    <h2 class="interests__header  ">Interests</h2>
+    <h2 class="interests__header">Interests</h2>
     <div class="row interests__container">
       <div class="col-md-1 text-right ">
         <a href="#"><img src="assets/logo-1.png" class="interests__logo " alt="" /></a>
