--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,73 +16,80 @@
 </head>
 
 <body>
-    <div class="container intro">
-        <!-- cover -->
-        <div class=" item-intro">
-            <div class="position-absolute img-profile">
-                <img src="../FrontEnd/assities/3d.jpg" style="width: 160px; height:160px;" class="img-fluid rounded-circle">
-            </div>
-        </div>
-        <!-- personal information -->
-        <div class="d-block p-2 bg-light">
-            <div class=" d-flex flex-row-reverse " style="display: table; width: 100%;">
-                <div style="margin: 1rem; color:#0073b1; display: table-cell">
-                    <i class="fas fa-pencil-alt"></i>
+    <div class="container">
+        <div class="row">
+            <!-- upper div that includes img -->
+            <div class="col-sm-12 item-intro">
+                <!--profile img -->
+                <div class="position-absolute img-profile">
+                    <img src="assets/3d.jpg" class="rounded-circle profile-image">
                 </div>
-                <!--<button type="button" class="btn btn-outline-dark" style="margin: 0 1rem;">More...</button>-->
-                <div class="dropdown p-2">
-                    <button class=" btn border border-dark btn-light" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        More....
-                    </button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <button class="dropdown-item " type="button"> <i class="fas fa-share p-2"></i>Share Profile vs Message</button>
-                        <button class="dropdown-item" type="button"> <i class="fas fa-share p-2"></i>Save as PDF</button>
+            </div>
+            <!-- down div -->
+            <div class="col-sm-12">
+                <!-- upper section -->
+                <div class="row pt-sm-3 pb-sm-3">
+                    <div class="col-sm-6 offset-6">
+                        <div class="d-flex justify-content-end align-items-center">
+                            <div class="p-2">
+                                <button type="button " class="btn btn-primary btn-lg">Add Profile Section <i class="fas fa-sort-down" style="font-size: 1.8rem;"></i></button>
+                            </div>
+                            <div class="dropdown p-2">
+                                <button class=" btn border border-dark btn-light" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        More....
+                                    </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                    <button class="dropdown-item " type="button"> <i class="fas fa-share p-2"></i>Share Profile vs Message</button>
+                                    <button class="dropdown-item" type="button"> <i class="fas fa-share p-2"></i>Save as PDF</button>
+                                </div>
+                            </div>
+                            <div class="p-2">
+                                <i class="fas fa-pencil-alt" style="font-size: 1.5rem;"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- down section  -->
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="p-sm-3">
+                            <div>
+                                <h2 class="d-inline-block">Nora </h2>
 
+                                <h2 class="d-inline-block"> Mohamed</h2>
+                            </div>
+                            <div>
+                                <h4> ITI Intake 40</h4>
+                            </div>
+                            <div class="d-flex">
+                                <h4>Egypt </h4>
+                                <ul class="info-ul">
+                                    <li id="connection">
+                                        <!-- Button trigger modal -->
+                                        <li id="contact"><a href="#" class="btn btn-link"> 500+  Connections </a></li>
+                                        <a href="javascript:;" type="button" class="btn btn-link" data-toggle="modal" data-target="#Connection">
+                                            Contact info
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="p-2">
-                    <button type="button " class="btn btn-primary btn-lg">Add Profile Section<i class="fas fa-sort-down "></i></button>
-                </div>
-            </div>
-            <div class="d-flex justify-content-between p-2">
-                <div class="d-block p-2">
-                    <div class="d-flex">
-                        <ul class="info-ul">
-                            <li id="firstName">Nora </li>
-                            <li id="lastName"> Mohamed </li>
-                        </ul>
-                    </div>
-                    <div>
-                        <ul class="info-ul" id="possition">
-                            <li> ITI Intake 40</li>
-                        </ul>
-                    </div>
-                    <div class="d-flex ">
-                        <ul class="info-ul">
-                            <li id="country" style="margin: auto;">Egypy.</li>
-                            <li id="connection">
-                                <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-link" data-toggle="modal" data-target="#Connection">
-                                    Connection .
-                                </button>
-                            </li>
-                            <li id="contact"><a href="#" class="btn btn-link">Contact Info </a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="d-block p-2">
-                    <div class="d-flex p-2" id="current company">
-                        <div class="sm-img"><img class="img-fluid" src="../FrontEnd/assities/0.png"> </div>
-                        <div class="btn btn-link link"> Information Technology Instutute ITI </div>
-                    </div>
-                    <div class="d-flex p-2" id="last company">
-                        <div style="width: 32px; height: 32px;"><img class="img-fluid" src="../FrontEnd/assities/0.png"> </div>
-                        <div class="btn btn-link link"> Information Technology Instutute ITI </div>
+                    <div class="col-sm-6 p-sm-3">
+                        <div class="d-flex justify-content-end" id="current company">
+                            <div class="sm-img"><img class="img-fluid" src="assets/0.png"> </div>
+                            <div class="btn btn-link info-link"> Information Technology Instutute ITI </div>
+                        </div>
+                        <div class="d-flex justify-content-end" id="last company">
+                            <div style="width: 32px; height: 32px;"><img class="img-fluid" src="assets/0.png"> </div>
+                            <div class="btn btn-link info-link"> Information Technology Instutute ITI </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Modal -->
     <div class="modal fade" id="Connection" tabindex="-1" role="dialog" aria-labelledby="ConnectionLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
