Updated Aya's Section

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -118,7 +118,7 @@
   </section>
 
   <!-- background section -->
-  <section class="p-3">
+  <section class="p-3" id="Background">
     <div class="background container u-border rounded p-0">
       <!-- Experience -->
       <div class="p-4">
@@ -129,7 +129,7 @@
         </div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <h3>Student</h3>
@@ -149,7 +149,7 @@
         <div class="u-border-bottom offset-1 row"></div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10">
             <h3>Student</h3>
@@ -181,7 +181,7 @@
         </div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <a href="http://" class="stretched-link text-decoration-none text-reset">
@@ -202,7 +202,7 @@
         <div class="u-border-bottom offset-1 row"></div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <a href="http://" class="stretched-link text-decoration-none text-reset">
@@ -235,7 +235,7 @@
         </div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <h3>Role</h3>
@@ -253,7 +253,7 @@
         <div class="u-border-bottom offset-1 row"></div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <h3>Role</h3>
@@ -283,7 +283,7 @@
         </div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <h3>Name</h3>
@@ -301,7 +301,7 @@
         <div class="u-border-bottom offset-1 row"></div>
         <div class="background__hide-icon media row py-3 ">
           <div class="col-sm-1">
-            <img src="Assets/Img/itiLogo.png" class="align-self-start background__img" />
+            <img src="Assets/images/itiLogo.png" class="align-self-start background__img" />
           </div>
           <div class="media-body col-sm-10 ">
             <h3>Name</h3>
