--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="css/style.css" />
   <title>LinkedIn</title>
 </head>
-
 <body>
   <!-- Profile Header Section -->
   <section class="p-3" id="ProfileSummary">
@@ -93,6 +92,24 @@
     </div>
   </section>
 
+  <!-- About section -->
+  <section class="p-3" id="About">
+    <div class="container">
+      <div class="row u-border pt-5 pb-5 pr-3 pl-3">
+        <header class="col-12 d-flex justify-content-between">
+          <h2>About</h2>
+          <a href="#" data-toggle="modal" data-target="#FullModal">
+            <i class="fas fa-pencil-alt profile-icon"></i></a>
+        </header>
+        <div class="col-12 pt-3">
+          <h5>
+            Talented, Skilled, Passionate, and even Young Hardcore Developer
+          </h5>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Dashboard section -->
   <section class="p-3" id="Dashboard">
     <div class="container">
@@ -124,7 +141,7 @@
       <div class="p-4">
         <div class="row">
           <h2 class="col-sm-11 background__section-heading">Experience</h2>
-          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-plus p-3 profile-icon "></i></a>
         </div>
         <div class="background__hide-icon media row py-3 ">
@@ -143,7 +160,7 @@
             <p class="mb-0 text-muted">Egypt</p>
             <p class="mb-0 text-muted">Enterprise and web development track</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
         </div>
         <div class="u-border-bottom offset-1 row"></div>
@@ -163,7 +180,7 @@
             <p class="mb-0 text-muted">Egypt</p>
             <p class="mb-0 text-muted">Enterprise and web development track</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
 
         </div>
@@ -176,7 +193,7 @@
       <div class="p-4">
         <div class="row">
           <h2 class="col-sm-11 background__section-heading">Education</h2>
-          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-plus p-3 profile-icon "></i></a>
         </div>
         <div class="background__hide-icon media row py-3 ">
@@ -196,7 +213,7 @@
             <p class="mb-0 text-muted">Activities and societies</p>
             <p class="mb-0 text-muted">Description</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
         </div>
         <div class="u-border-bottom offset-1 row"></div>
@@ -217,7 +234,7 @@
             <p class="mb-0 text-muted">Activities and societies</p>
             <p class="mb-0 text-muted">Description</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
 
         </div>
@@ -230,7 +247,7 @@
       <div class="p-4">
         <div class="row">
           <h2 class="col-sm-11 background__section-heading">Volunteer Experience</h2>
-          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-plus p-3 profile-icon "></i></a>
         </div>
         <div class="background__hide-icon media row py-3 ">
@@ -247,7 +264,7 @@
             <p class="mb-0 text-muted">Cause</p>
             <p class="mb-0 text-muted">Description</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
         </div>
         <div class="u-border-bottom offset-1 row"></div>
@@ -265,7 +282,7 @@
             <p class="mb-0 text-muted">Cause</p>
             <p class="mb-0 text-muted">Description</p>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
 
         </div>
@@ -278,7 +295,7 @@
       <div class="p-4">
         <div class="row">
           <h2 class="col-sm-11 background__section-heading">licenses & certifications</h2>
-          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-sm-1 text-right " data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-plus p-3 profile-icon "></i></a>
         </div>
         <div class="background__hide-icon media row py-3 ">
@@ -295,7 +312,7 @@
             <p class="mb-0 text-muted">Credntial ID</p>
             <a href="http://" class="mb-0 text-muted">See Credntial</a>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
         </div>
         <div class="u-border-bottom offset-1 row"></div>
@@ -313,7 +330,7 @@
             <p class="mb-0 text-muted">Credntial ID</p>
             <a href="http://" class="mb-0 text-muted">See Credntial</a>
           </div>
-          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#exampleModal"><i
+          <a href="" class="col-1 text-right" data-toggle="modal" data-target="#FullModal"><i
               class="fas fa-pen p-3 profile-icon profile-icon--hide"></i></a>
 
         </div>
@@ -329,7 +346,7 @@
           <h2>Skills &Endorsements </h2>
           <a href="#" class="btn btn--edit btn--inline float-md-right" data-toggle="modal" data-target=".edit-skills"><i
               class="fas fa-edit"></i></a>
-          <a href="#" class="btn btn--add btn--inline float-md-right">Add a New Skill</a>
+          <a href="#" class="btn btn--add btn--inline float-md-right" data-toggle="modal" data-target="#SkillsModal">Add a New Skill</a>
           <div class="skill">
             <div class="skill__title">
               <h4 class="skill__name">Teamwork. </h4>
@@ -912,6 +929,138 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Full Modal -->
+  <div class="modal fade" id="FullModal" tabindex="-1" role="dialog" aria-labelledby="FullModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content row">
+        <div class="modal-header">
+          <h5 class="modal-title" id="FullModalLabel">Add Bla Bla Bla</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="">
+            <div class="form-controls">
+              <div class="form-group">
+                <label for="" class="required">Title</label>
+                <input class="form-control" type="text" name="" id="" placeholder="Bla Bla Bla">
+              </div>
+              <div class="form-group">
+                <label for="">Employment type</label>
+                <select class="form-control" name="" id="">
+                  <option value="" disabled selected hidden>-</option>
+                  <option value="">Opa</option>
+                  <option value="">Opaa</option>
+                  <option value="">Opaaa</option>
+                  <option value="">Opaaaa</option>
+                  <option value="">Opaaaaa</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label for="">Description</label>
+                <textarea class="form-control" name="" id="" cols="30" rows="4"></textarea>
+              </div>
+              <div class="form-group">
+                <div><input type="checkbox" name="" id="CurrentlyWorking"><span> I am
+                    currently working in this role
+                    Transfare</span></div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <label for="" class="required">Start Date</label>
+                    <div class="row">
+                      <div class="col-sm-12">
+                        <select class="form-control" name="" id="">
+                          <option value="" disabled selected hidden>Month</option>
+                          <option value="">Opa</option>
+                          <option value="">Opaa</option>
+                          <option value="">Opaaa</option>
+                          <option value="">Opaaaa</option>
+                          <option value="">Opaaaaa</option>
+                        </select>
+                      </div>
+                      <div class="col-sm-12">
+                        <select class="form-control" name="" id="">
+                          <option value="" disabled selected hidden>Year</option>
+                          <option value="">Opa</option>
+                          <option value="">Opaa</option>
+                          <option value="">Opaaa</option>
+                          <option value="">Opaaaa</option>
+                          <option value="">Opaaaaa</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-sm-6">
+                    <label for="" class="required">End Date</label>
+                    <h4 id="PresentWorkDate">Present</h4>
+                    <div class="row" id="EndWorkDate">
+                      <div class="col-sm-12">
+                        <select class="form-control" name="" id="">
+                          <option value="" disabled selected hidden>Month</option>
+                          <option value="">Opa</option>
+                          <option value="">Opaa</option>
+                          <option value="">Opaaa</option>
+                          <option value="">Opaaaa</option>
+                          <option value="">Opaaaaa</option>
+                        </select>
+                      </div>
+                      <div class="col-sm-12">
+                        <select class="form-control" name="" id="">
+                          <option value="" disabled selected hidden>Year</option>
+                          <option value="">Opa</option>
+                          <option value="">Opaa</option>
+                          <option value="">Opaaa</option>
+                          <option value="">Opaaaa</option>
+                          <option value="">Opaaaaa</option>
+                        </select>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Skills Modal -->
+  <div class="modal fade" id="SkillsModal" tabindex="-1" role="dialog" aria-labelledby="SkillsModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content row">
+        <div class="modal-header">
+          <h5 class="modal-title" id="SkillsModalLabel">Add Some SKills N00B</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form action="">
+            <div class="form-controls">
+
+              <div class="taged-textbox form-group">
+
+                <input class="taged-textbox__textbox form-control" type="text" name="" id=""
+                  placeholder="Add Some Skills N00B">
+              </div>
+
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary">Save</button>
         </div>
       </div>
     </div>
